--- a/app/assets/stylesheets/layout/_grid-flex.scss
+++ b/app/assets/stylesheets/layout/_grid-flex.scss
@@ -75,3 +75,7 @@
     }
   }
 }
+
+.flex-col-no-padding {
+  padding: 0;
+}
